--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # por si no están en requirements.txt, instala las herramientas de CI:
-          python -m pip install flake8 nose nose-spec coverage
+          # por si la cobertura no estuviera en requirements:
+          python -m pip install coverage
 
       - name: Lint with flake8
         run: |
@@ -29,4 +29,8 @@ jobs:
 
       - name: Run unit tests with nose
         run: |
+          # Si tu entorno tiene el plugin de "spec", estos flags funcionarán.
+          # Si llegara a fallar por flags desconocidos, usa la línea alternativa de abajo.
           nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+          # --- Alternativa si falla por flags desconocidos (quitar la línea de arriba y descomentar):
+          # nosetests -v --with-coverage --cover-package=app
